<?xml version="1.0"?>
<package format="2">
  <name>multicam</name>
  <version>0.0.0</version>
  <description>Launch 2 cameras</description>
  <maintainer email="john@picknik.ai">John Stechschulte</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <exec_depend>realsense2_camera</exec_depend>
</package>
